# ZeroVault

./: Cargo.toml  README.md
src/: crypto.rs  error.rs  main.rs  vault.rs
