[package]
name = "zerovault"
version = "0.1.0"
edition = "2021"
description = "Lightweight offline CLI password manager — Argon2id + ChaCha20-Poly1305"

[[bin]]
name = "zerovault"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7"
